--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-author: Joshua Sanders
-title: 
+author: Joshua Sanders 
+title: Out of the comfort zone. 
 header-img: img/home-bg.png
 email: ninjosh2@gmail.com
-copyright_name: Joshua Sanders
+copyright_name: Joshua Sanders 
 description: > # this means to ignore newlines until "baseurl:"
-  
+  Or : Why did I decided to peruse software development?
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  Ninjosh2
